--- a/bucket/app/fallback/index.html
+++ b/bucket/app/fallback/index.html
@@ -23,8 +23,8 @@
     /* Content */
     body {
       margin: 0;
-      background: #fafafa;
-      color: #1f1f1f;
+      background: #212121;
+      color: #fff;
       font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
       font-weight: 400;
       -webkit-tap-highlight-color: transparent;
@@ -55,7 +55,7 @@
       text-align: center;
       padding: 15px;
       border-radius: 12px;
-      background: #fff;
+      background: #212121;
       border: 1px solid #ebebeb;
     }
 
@@ -92,7 +92,7 @@
       align-items: center;
       width: 66px;
       height: 66px;
-      background-color: #fff;
+      background-color: #212121;
       outline: none;
       border: 1px solid #ebebeb;
       border-radius: 690px;
@@ -100,7 +100,7 @@
     }
 
     .reload-button:hover {
-      background-color: #fafafa;
+      background-color: #212121;
     }
 
     .icon {
