--- a/bucket/app/chat.html
+++ b/bucket/app/chat.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Private Chat</title>
+  <link rel="stylesheet" href="/chat.css">
+    <script src="/chat.js"></script>
 </head>
 <body>
   
