--- a/bucket/app/chat.html
+++ b/bucket/app/chat.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
-  <link rel="stylesheet" href="https://www.discover-sharm.com/app/chat.css">
-    <script src="https://www.discover-sharm.com/app/chat.js"></script>
+  <link rel="stylesheet" href="/app/chat.css">
+    <script src="/app/chat.js"></script>
 </head>
 <body>
 <div id="chat-container">
