--- a/bucket/admin/edit-trips.html
+++ b/bucket/admin/edit-trips.html
@@ -263,7 +263,7 @@
           <div>
             <h1 class="text-xl font-bold">Discover Sharm</h1>
             <div class="flex items-center mt-1">
-              <span id="userRole" class="role-badge mr-2">Loading...</span>
+              <span id="userRole" class="role-badge mr-2">Loading...</span> \n
               <span id="userEmail" class="text-xs text-white/80"></span>
             </div>
           </div>
@@ -277,7 +277,7 @@
 
   <main class="container mx-auto px-4 py-6">
     <!-- Stats Cards -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mb-6">
+    <div class="grid grid-cols-2 sm:grid-cols-2 lg:grid-cols-4 gap-4 mb-6">
       <div class="glass-card p-4 rounded-xl stat-card">
         <div class="flex items-center justify-between">
           <div>
