--- a/bucket/admin/edit-trips.html
+++ b/bucket/admin/edit-trips.html
@@ -263,7 +263,7 @@
           <div>
             <h1 class="text-xl font-bold">Discover Sharm</h1>
             <div class="flex items-center mt-1">
-              <span id="userRole" class="role-badge mr-2">Loading...</span> \n
+              <span id="userRole" class="role-badge mr-2">Loading...</span> </br>
               <span id="userEmail" class="text-xs text-white/80"></span>
             </div>
           </div>
