--- a/bucket/admin/edit-trips.html
+++ b/bucket/admin/edit-trips.html
@@ -349,7 +349,9 @@
             <input type="text" placeholder="Search trips..." class="pl-8 pr-4 py-1.5 text-sm rounded-full border border-slate-200 focus:outline-none focus:ring-2 focus:ring-amber-500 focus:border-transparent">
             <i class="fas fa-search absolute left-3 top-2.5 text-slate-400 text-sm"></i>
           </div>
-          
+                    <button id="newTripBtn" class="hidden bg-gradient-to-r from-amber-500 to-amber-600 hover:from-amber-600 hover:to-amber-700 text-white px-3 py-1.5 rounded-full text-sm font-medium shadow-sm transition-all">
+            <i class="fas fa-plus mr-1"></i> New Trip
+          </button>
         </div>
       </div>
       
