--- a/bucket/admin/edit-trips.html
+++ b/bucket/admin/edit-trips.html
@@ -262,7 +262,7 @@
           </div>
           <div>
             <h1 class="text-xl font-bold">Discover Sharm</h1>
-            <div class="flex items-center mt-1">
+            <div class="flex items-center gap-2 mt-1">
               <span id="userRole" class="role-badge mr-2">Loading...</span>
               <span id="userEmail" class="text-xs text-white/80"></span>
             </div>
