--- a/bucket/admin/edit-trips.html
+++ b/bucket/admin/edit-trips.html
@@ -327,7 +327,7 @@
 
     <!-- Trip List Section -->
     <div id="tripListSection">
-      <div class="flex justify-between items-center mb-4">
+      <div class="flex justify-between gap-4 items-center mb-4">
         <div class="relative w-full max-w-md">
           <input type="text" id="searchInput" placeholder="Search trips..." class="pl-8 pr-4 py-1.5 text-sm rounded-full border border-slate-200 focus:outline-none focus:ring-2 focus:ring-amber-500 w-full">
           <i class="fas fa-search absolute left-3 top-2.5 text-slate-400 text-sm"></i>
