--- a/bucket/admin/edit-trips.html
+++ b/bucket/admin/edit-trips.html
@@ -257,7 +257,7 @@
     <div class="container mx-auto px-4 py-3">
       <div class="flex justify-between items-center">
         <div class="flex items-center space-x-2">
-          <div class="p-2 bg-white/20 rounded-lg">
+          <div class="">
             <img src="https://blogger.googleusercontent.com/img/a/AVvXsEjzC-_SVx3NxA9CG2wsx34HToudXI08HhWtz0QKxJ-cPr0OpBCWHLV4hB3n-eavFcUfrIZCRpX7JRo7xe1CdoqdgKROJJNuWM-gMT-tQLfS52r1pyclYR47dJ_GXrWrTB1GQdPF5XOBkeZuz6IyOYxlVF1Vwy7HFLLY7B5qcjgBlYCaS74c6kJx_0uJAO8=s150" class="w-10 h-10"></i>
           </div>
           <div>
