--- a/bucket/admin/edit-trips.html
+++ b/bucket/admin/edit-trips.html
@@ -259,10 +259,11 @@
         <div class="flex items-center space-x-2">
           
           <div>
-            <div class="">
+            <div class="flex justify-between items-start">
             <img src="https://blogger.googleusercontent.com/img/a/AVvXsEjzC-_SVx3NxA9CG2wsx34HToudXI08HhWtz0QKxJ-cPr0OpBCWHLV4hB3n-eavFcUfrIZCRpX7JRo7xe1CdoqdgKROJJNuWM-gMT-tQLfS52r1pyclYR47dJ_GXrWrTB1GQdPF5XOBkeZuz6IyOYxlVF1Vwy7HFLLY7B5qcjgBlYCaS74c6kJx_0uJAO8=s150" class="w-10 h-10"></i>
-          </div>
+      
             <h1 class="text-xl font-bold">Discover Sharm</h1>
+          </div>
             <div class="flex items-center gap-2 mt-1">
               <span id="userRole" class="role-badge mr-2">Loading...</span>
               <span id="userEmail" class="text-xs text-white/80"></span>
