--- a/bucket/admin/edit-trips.html
+++ b/bucket/admin/edit-trips.html
@@ -260,7 +260,7 @@
           
           <div>
             <div class="flex items-start">
-            <img src="https://blogger.googleusercontent.com/img/a/AVvXsEjzC-_SVx3NxA9CG2wsx34HToudXI08HhWtz0QKxJ-cPr0OpBCWHLV4hB3n-eavFcUfrIZCRpX7JRo7xe1CdoqdgKROJJNuWM-gMT-tQLfS52r1pyclYR47dJ_GXrWrTB1GQdPF5XOBkeZuz6IyOYxlVF1Vwy7HFLLY7B5qcjgBlYCaS74c6kJx_0uJAO8=s150" class="w-15 h-15"></i>
+            <img src="https://blogger.googleusercontent.com/img/a/AVvXsEg5RYSZreRpwMYh-lQE6dj3YeAV4UArrIV9pmqQFF1RT2-asCldrobt8fIt_1eMP2dOfwOOaWKyMbnXdZcGTNTf4Ij9i-diV4KZ1WaUxj28ZCB3K-Hf-hNqnX416GDa0GM06iJc3QnpfFVa0HwzOaGc9TfI-OJsRDELxg5j7ENgp4wx-Bs3vO7BY1xl3_Y=s1600" class="w-auto h-12"></i>
       
             <h1 class="text-xl align-middle font-bold">Discover Sharm</h1>
           </div>
