--- a/bucket/admin/index.html
+++ b/bucket/admin/index.html
@@ -43,7 +43,7 @@
         }
     </script>
 
-
+<body>
     <div class="container mx-auto px-4 py-8">
         <!-- Header -->
         <div class="flex flex-col md:flex-row justify-between items-center mb-6 gap-4">
@@ -182,7 +182,7 @@
 
     <!-- Toast Notification -->
     <div id="toast" class="toast"></div>
-
+</body>
     <!-- Firebase JS -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
