--- a/bucket/admin/index.html
+++ b/bucket/admin/index.html
@@ -43,7 +43,7 @@
         }
     </script>
 
-<body>
+<body  class="bg-black ">
     <div class="container mx-auto px-4 py-8">
         <!-- Header -->
         <div class="flex flex-col md:flex-row justify-between items-center mb-6 gap-4">
