--- a/bucket/admin/index.html
+++ b/bucket/admin/index.html
@@ -65,7 +65,7 @@
         </div>
         
         <!-- Stats Summary -->
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mb-8">
+        <div class="grid grid-cols-2 gap-4 mb-8">
             <div class="stat-card">
                 <div class="stat-icon">
                     <i class="fas fa-calendar-check"></i>
