--- a/bucket/admin/index.html
+++ b/bucket/admin/index.html
@@ -44,8 +44,8 @@
         }
     </script>
 
-<body  class="bg-black container mx-auto px-4 py-6">
-    <div class="container mx-auto px-4 py-8">
+<body  class="bg-black container mx-auto">
+    <div class="container mx-auto">
         <!-- Header -->
         <div class="flex flex-col md:flex-row justify-between items-center mb-6 gap-4">
             <h1 class="text-2xl md:text-3xl font-bold text-primary">Analytics Dashboard</h1>
