--- a/bucket/admin/index.html
+++ b/bucket/admin/index.html
@@ -44,7 +44,7 @@
         }
     </script>
 
-<body  class="bg-black container mx-auto">
+<body  class="bg-black container px-2 py-6 mx-auto">
     <div class="container mx-auto">
         <!-- Header -->
         <div class="flex flex-col md:flex-row justify-between items-center mb-6 gap-4">
