--- a/bucket/admin/index.html
+++ b/bucket/admin/index.html
@@ -9,7 +9,11 @@
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/exceljs/4.3.0/exceljs.min.js"></script>
-    
+    <style>
+.gradient-bg {
+      background: linear-gradient(135deg, #f59e0b 0%, #ef4444 100%);
+    }
+    </style>
     <script>
         tailwind.config = {
             theme: {
