--- a/bucket/admin/edit-trips.html
+++ b/bucket/admin/edit-trips.html
@@ -263,7 +263,7 @@
             <img src="https://blogger.googleusercontent.com/img/a/AVvXsEg5RYSZreRpwMYh-lQE6dj3YeAV4UArrIV9pmqQFF1RT2-asCldrobt8fIt_1eMP2dOfwOOaWKyMbnXdZcGTNTf4Ij9i-diV4KZ1WaUxj28ZCB3K-Hf-hNqnX416GDa0GM06iJc3QnpfFVa0HwzOaGc9TfI-OJsRDELxg5j7ENgp4wx-Bs3vO7BY1xl3_Y=s1600" class="w-auto h-12"></i>
       
           </div>
-            <div class="flex items-center gap-2 mt-1">
+            <div class="flex items-center gap-2 mt-1 hidden">
               <span id="userRole" class="role-badge mr-2">Loading...</span>
               <span id="userEmail" class="text-xs text-white/80"></span>
             </div>
