--- a/bucket/admin/edit-trips.html
+++ b/bucket/admin/edit-trips.html
@@ -250,8 +250,44 @@
       }
     }
   </style>
+
+
+  <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        primary: {
+                            DEFAULT: '#ffc107',
+                            light: '#ffd54f',
+                            dark: '#ffa000'
+                        },
+                        secondary: '#ff9800',
+                        accent: '#ff5722',
+                        dark: '#333',
+                        darker: '#222',
+                        darkest: '#111',
+                        light: '#f5f5f5',
+                        gray: {
+                            DEFAULT: '#666',
+                            light: '#444',
+                            lighter: '#555'
+                        },
+                        success: '#4caf50',
+                        warning: '#ff9800',
+                        danger: '#f44336',
+                        info: '#2196f3'
+                    },
+                    fontFamily: {
+                        sans: ['Poppins', 'sans-serif']
+                    }
+                }
+            }
+        }
+    </script>
 </head>
-<body class="min-h-screen">
+<body class="min-h-screen bg-darker text-light">
+
   <!-- Header -->
   <header class="sticky top-0 z-50 gradient-bg text-white shadow-lg">
     <div class="container mx-auto px-4 py-3">
