--- a/bucket/admin/ad.html
+++ b/bucket/admin/ad.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TourMaster Analytics</title>
+    <title>Tour Moderator Analytics || Discover Sharm</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
@@ -685,8 +685,8 @@
     <!-- Header -->
     <header class="app-header">
         <div class="logo-container">
-            <img src="https://blogger.googleusercontent.com/img/a/AVvXsEg5RYSZreRpwMYh-lQE6dj3YeAV4UArrIV9pmqQFF1RT2-asCldrobt8fIt_1eMP2dOfwOOaWKyMbnXdZcGTNTf4Ij9i-diV4KZ1WaUxj28ZCB3K-Hf-hNqnX416GDa0GM06iJc3QnpfFVa0HwzOaGc9TfI-OJsRDELxg5j7ENgp4wx-Bs3vO7BY1xl3_Y=s1600" alt="TourMaster Logo" class="app-logo">
-            <span class="app-name">TourMaster</span>
+            <img src="https://blogger.googleusercontent.com/img/a/AVvXsEjjIf2OtHWBRNEm8Ycsr3Bxdsy_wUAgqj10JVNBB3YUxY3TszMd05C6Uyb3dt2z2mP9G3lT6RtQ-ih1RDpjvXrpaNZii0-rucb5IqebwaiIuDaTh-9ce3EnIgJGR8e10lOPUk4jkLioN6q22RMOWq6dpOBJnw_mMCd3vRRDotQY-_Wl6Dwl61INspMXfgI=s1600" alt="Discover Sharm Logo" class="app-logo">
+            <span class="app-name">Tour Moderator</span>
         </div>
 
         <div class="header-actions">
