--- a/bucket/admin/ad.html
+++ b/bucket/admin/ad.html
@@ -158,6 +158,7 @@
 
         /* Main Content */
         .main-content {
+          width:100%;
             padding: 2rem;
         }
 
@@ -568,6 +569,7 @@
             }
             
             .main-content {
+              width:100%;
                 padding: 1.5rem;
             }
         }
