--- a/bucket/admin/ad.html
+++ b/bucket/admin/ad.html
@@ -22,7 +22,7 @@
 </head>
 <body class="min-h-screen bg-darker text-light">
     <!-- Sidebar -->
-    <div id="sidebar" class="fixed top-0 left-0 h-screen w-64 bg-darkest shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 z-50">
+    <div id="sidebar" class="fixed top-0 left-0 h-screen w-64 gradient-bg shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 z-50">
         <div class="flex items-center justify-center p-4 border-b border-gray-700">
             <img src="https://blogger.googleusercontent.com/img/a/AVvXsEg5RYSZreRpwMYh-lQE6dj3YeAV4UArrIV9pmqQFF1RT2-asCldrobt8fIt_1eMP2dOfwOOaWKyMbnXdZcGTNTf4Ij9i-diV4KZ1WaUxj28ZCB3K-Hf-hNqnX416GDa0GM06iJc3QnpfFVa0HwzOaGc9TfI-OJsRDELxg5j7ENgp4wx-Bs3vO7BY1xl3_Y=s1600" class="w-auto h-12">
         </div>
