--- a/bucket/admin/ad.html
+++ b/bucket/admin/ad.html
@@ -94,7 +94,8 @@
             <div class="container mx-auto px-4 py-3">
                 <div class="flex justify-between items-center">
                     <div class="flex items-center space-x-2">
-                        
+                        <img src="https://blogger.googleusercontent.com/img/a/AVvXsEg5RYSZreRpwMYh-lQE6dj3YeAV4UArrIV9pmqQFF1RT2-asCldrobt8fIt_1eMP2dOfwOOaWKyMbnXdZcGTNTf4Ij9i-diV4KZ1WaUxj28ZCB3K-Hf-hNqnX416GDa0GM06iJc3QnpfFVa0HwzOaGc9TfI-OJsRDELxg5j7ENgp4wx-Bs3vO7BY1xl3_Y=s1600" class="w-auto h-12">
+        
                     </div>
                     <div class="flex items-center space-x-4">
                         <div class="relative">
