--- a/bucket/admin/ad.html
+++ b/bucket/admin/ad.html
@@ -23,8 +23,8 @@
 <body class="min-h-screen bg-darker text-light">
     <!-- Sidebar -->
     <div id="sidebar" class="fixed top-0 left-0 h-screen w-64 gradient-bg shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 z-50">
-        <div class="flex items-center justify-center p-4 border-b border-gray-700">
-            <h1 class="text-xl font-bold">Moderator</h1>
+   <div class="flex items-center space-x-2">
+      <h1 class="text-xl color-white font-bold">Moderator</h1>
         </div>
         <nav class="mt-6">
             <div class="px-4">
