--- a/bucket/admin/ad.html
+++ b/bucket/admin/ad.html
@@ -18,11 +18,14 @@
         .gradient-bg {
             background: linear-gradient(135deg, #f59e0b 0%, #ef4444 100%);
         }
+      .gradient-bg2 {
+            background: linear-gradient(135deg, #ef4444 0%, #f59e0b 100%);
+        }
     </style>
 </head>
 <body class="min-h-screen bg-darker text-light">
     <!-- Sidebar -->
-    <div id="sidebar" class="fixed top-0 left-0 h-screen w-64 gradient-bg shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 z-50">
+    <div id="sidebar" class="fixed top-0 left-0 h-screen w-64 gradient-bg2 shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 z-50">
    <div class="flex items-center justify-center p-4 border-b border-gray-700">
       <h1 class="text-xl color-white font-bold">Moderator</h1>
         </div>
