--- a/bucket/admin/home.html
+++ b/bucket/admin/home.html
@@ -667,18 +667,15 @@
 
                                 <div class="form-group">
                                     <label for="username">Username</label>
-                                    <input type="text" id="username" value="admin">
+                                    <input type="text" id="userName" value="admin">
                                 </div>
 
                                 <div class="form-group">
                                     <label for="email">Email</label>
-                                    <input type="email" id="email" value="admin@discoversharm.com">
+                                    <input type="email" id="userEmail" value="admin@discoversharm.com">
                                 </div>
 
-                                <div class="form-group">
-                                    <label for="password">Password</label>
-                                    <input type="password" id="password" placeholder="••••••••">
-                                </div>
+                                
 
                                 <div class="form-group">
                                     <label for="notifications">Notifications</label>
