--- a/bucket/admin/home.html
+++ b/bucket/admin/home.html
@@ -35,7 +35,7 @@
             <div class="logo-container">
                 <img src="https://blogger.googleusercontent.com/img/a/AVvXsEjGLYfehf5gTkhli-onh8WqHg2Ve_BEw1GHxqS5E0pUMywRV9LXj0M45PfhXXgiEwCcR3t8EzzoBUAbhLjIlbAmttq5Jf1Quhxke9PBW5GFu1fwSIjtAzPwRhjUTAk_vV1kpZzApx6V-nYEfRpPMeBI7QUDp7yUTk_0pwLbC3lXPnwQzvZPfuDSigaHziw=s1600" alt="Discover Sharm Logo" class="app-logo">
             </div>
-            <span class="text">Discover Sharm</span>
+            <span  id="userRole" class="text">Discover Sharm</span>
         </a>
         <ul class="side-menu top">
             <li class="active" data-section="dashboard">
