--- a/bucket/admin/home.html
+++ b/bucket/admin/home.html
@@ -110,7 +110,7 @@
             <label for="switch-mode" class="switch-mode"></label>
 
             <a href="#" class="profile">
-                <img src="" alt="Profile Image" id="profile-photo">
+                <img src="" alt="Profile Image" class="profile-photo" id="profile-photo">
             </a>
         </nav>
         <!-- NAVBAR -->
@@ -670,7 +670,7 @@
                                 <div class="form-group">
                                     <label for="profile-pic">Profile Picture</label>
                                     <div class="profile-pic-upload">
-                                        <img src="https://via.placeholder.com/100" alt="Profile" id="profile-pic-preview">
+                                        <img src="https://via.placeholder.com/100" class="profile-photo" alt="Profile" id="profile-pic-preview">
                                         <input type="file" id="profile-pic" accept="image/*">
                                         <label for="profile-pic" class="upload-btn">Change</label>
                                     </div>
