--- a/bucket/admin/home.html
+++ b/bucket/admin/home.html
@@ -677,13 +677,18 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="username">Username</label>
-                                    <input type="text" id="userName" value="admin">
+                                    <label for="username">Moderator Name</label>
+                                    <input type="text" id="userName" value="">
                                 </div>
 
                                 <div class="form-group">
                                     <label for="email">Email</label>
-                                    <input type="email" id="userEmail" value="admin@discoversharm.com">
+                                    <input type="email" id="userEmail" value="">
+                                </div>
+
+                              <div class="form-group">
+                                    <label for="phone">Phone</label>
+                                    <input type="phone" id="userPhone" value="">
                                 </div>
 
                                 
@@ -739,6 +744,7 @@
       if (isUserLoggedIn) {
         document.getElementById('userName').value = isUserLoggedIn;
         document.getElementById('userEmail').value = getCookie('email');
+        document.getElementById('userPhone').value = getCookie('phone');
         const backgroundImageUrl = getCookie('photo');
         
         // Set default profile photo if none exists
