--- a/bucket/admin/home.html
+++ b/bucket/admin/home.html
@@ -109,7 +109,7 @@
             <input type="checkbox" id="switch-mode" hidden>
             <label for="switch-mode" class="switch-mode"></label>
 
-            <a href="#" class="profile">
+            <a class="profile">
                 <img src="" alt="Profile Image" class="profile-photo" id="profile-photo">
             </a>
         </nav>
