--- a/bucket/admin/home.html
+++ b/bucket/admin/home.html
@@ -109,9 +109,9 @@
             <input type="checkbox" id="switch-mode" hidden>
             <label for="switch-mode" class="switch-mode"></label>
 
-            <a class="profile">
-                <img src="" alt="Profile Image" class="profile-photo" id="profile-photo">
-            </a>
+            <div class="profile w-10 h-10">
+                <img src="" alt="Profile Image" class="profile-photo w-10 h-10" id="profile-photo">
+            </div>
         </nav>
         <!-- NAVBAR -->
 
