--- a/bucket/admin/home.html
+++ b/bucket/admin/home.html
@@ -109,8 +109,8 @@
             <input type="checkbox" id="switch-mode" hidden>
             <label for="switch-mode" class="switch-mode"></label>
 
-            <div class="profile  rounded-full w-10 h-10">
-                <img src="" alt="Profile Image" class="profile-photo rounded-full w-10 h-10" id="profile-photo">
+            <div class="profile  size-12 rounded-full">
+                <img src="" alt="Profile Image" class="profile-photo size-12 rounded-full bg-cover" id="profile-photo">
             </div>
         </nav>
         <!-- NAVBAR -->
