--- a/bucket/admin/home.html
+++ b/bucket/admin/home.html
@@ -81,7 +81,7 @@
         <ul class="side-menu">
             <li data-section="settings">
                 <a href="#">
-                    <img src="" alt="Profile Image" class="profile-photo size-9 rounded-full bg-cover" id="profile-photo">
+                    <img src="" alt="Profile Image" class="profile-photo size-7 rounded-full" id="profile-photo">
          
                     <span class="text">Settings</span>
                 </a>
