--- a/bucket/admin/home.html
+++ b/bucket/admin/home.html
@@ -83,7 +83,7 @@
                 <a href="#">
                     <img src="" alt="Profile Image" class="profile-photo bx rounded-full" id="profile-photo">
          
-                    <span class="text">  Settings</span>
+                    <span class="text text-center">Settings</span>
                 </a>
             </li>
             <li>
