--- a/bucket/admin/home.html
+++ b/bucket/admin/home.html
@@ -110,8 +110,7 @@
             <input type="checkbox" id="switch-mode" hidden>
             <label for="switch-mode" class="switch-mode"></label>
 
-            <div class="profile  size-12 rounded-full">
-                   </div>
+            
         </nav>
         <!-- NAVBAR -->
 
@@ -707,10 +706,9 @@
                                 <div class="form-group">
                                     <label for="dark-mode">Dark Mode</label>
                                     <div class="switch-container">
-                                        <label class="switch">
-                                            <input type="checkbox" id="dark-mode">
-                                            <span class="slider round"></span>
-                                        </label>
+                                        <input type="checkbox" id="switch-mode" hidden>
+            <label for="switch-mode" class="switch-mode"></label>
+
                                         <span>Enable dark mode</span>
                                     </div>
                                 </div>
