--- a/bucket/admin/home.html
+++ b/bucket/admin/home.html
@@ -579,7 +579,7 @@
                             <div class="team-grid">
                                 <div class="team-member">
                                     <div class="member-avatar">
-                                        <img src="https://via.placeholder.com/80" alt="Team Member">
+                                        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="Team Member">
                                     </div>
                                     <div class="member-info">
                                         <h3>Mohamed Ali</h3>
@@ -594,7 +594,7 @@
 
                                 <div class="team-member">
                                     <div class="member-avatar">
-                                        <img src="https://via.placeholder.com/80" alt="Team Member">
+                                        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="Team Member">
                                     </div>
                                     <div class="member-info">
                                         <h3>Fatima Hassan</h3>
@@ -609,7 +609,7 @@
 
                                 <div class="team-member">
                                     <div class="member-avatar">
-                                        <img src="https://via.placeholder.com/80" alt="Team Member">
+                                        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="Team Member">
                                     </div>
                                     <div class="member-info">
                                         <h3>Omar Ibrahim</h3>
@@ -624,7 +624,7 @@
 
                                 <div class="team-member">
                                     <div class="member-avatar">
-                                        <img src="https://via.placeholder.com/80" alt="Team Member">
+                                        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="Team Member">
                                     </div>
                                     <div class="member-info">
                                         <h3>Laila Mahmoud</h3>
