--- a/bucket/admin/home.html
+++ b/bucket/admin/home.html
@@ -505,7 +505,7 @@
                                         <input type="checkbox">
                                     </div>
                                     <div class="message-sender">
-                                        <img src="https://via.placeholder.com/40" alt="Sender">
+                                        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="Sender">
                                         <span>Sarah Johnson</span>
                                     </div>
                                     <div class="message-content">
@@ -524,7 +524,7 @@
                                         <input type="checkbox">
                                     </div>
                                     <div class="message-sender">
-                                        <img src="https://via.placeholder.com/40" alt="Sender">
+                                        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="Sender">
                                         <span>Tour Operator</span>
                                     </div>
                                     <div class="message-content">
