--- a/bucket/admin/home.html
+++ b/bucket/admin/home.html
@@ -222,7 +222,7 @@
                             <div class="card-actions">
                                 <button class="filter-btn active">All</button>
                                 <button class="filter-btn">Active</button>
-                                <button class="filter-btn">Out of Stock</button>
+                                <button class="filter-btn">Pending</button>
                             </div>
                         </div>
                         <div class="card-body">
@@ -403,48 +403,7 @@
                         </div>
                     </div>
 
-                    <div class="stats-grid">
-                        <div class="card">
-                            <div class="card-header">
-                                <h2 class="card-title">Top trips</h2>
-                            </div>
-                            <div class="card-body">
-                                <ul class="top-trips">
-                                    <li>
-                                        <span class="trip-name">Egyptian Cotton Scarf</span>
-                                        <span class="trip-sales">245 sales</span>
-                                    </li>
-                                    <li>
-                                        <span class="trip-name">Papyrus Art</span>
-                                        <span class="trip-sales">189 sales</span>
-                                    </li>
-                                    <li>
-                                        <span class="trip-name">Necklace</span>
-                                        <span class="trip-sales">156 sales</span>
-                                    </li>
-                                    <li>
-                                        <span class="trip-name">Pyramid Model</span>
-                                        <span class="trip-sales">98 sales</span>
-                                    </li>
-                                    <li>
-                                        <span class="trip-name">Sphinx Statue</span>
-                                        <span class="trip-sales">76 sales</span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-
-                        <div class="card">
-                            <div class="card-header">
-                                <h2 class="card-title">Traffic Sources</h2>
-                            </div>
-                            <div class="card-body">
-                                <div class="chart-container">
-                                    <canvas id="trafficChart"></canvas>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
             </section>
 
@@ -486,7 +445,7 @@
                                         <input type="checkbox">
                                     </div>
                                     <div class="message-sender">
-                                        <img src="https://via.placeholder.com/40" alt="Sender">
+                                        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="Sender">
                                         <span>Ahmed Mohamed</span>
                                     </div>
                                     <div class="message-content">
