--- a/bucket/admin/home.html
+++ b/bucket/admin/home.html
@@ -377,7 +377,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="chart-container">
-                                    <canvas id="tourPerformanceChart"></canvas>
+                                    <div id="tourPerformanceChart" style="width: 100%; height: 400px;"></div>
                                 </div>
                             </div>
                         </div>
