--- a/bucket/admin/home.html
+++ b/bucket/admin/home.html
@@ -62,7 +62,7 @@
             <li data-section="analytics">
                 <a href="#">
                     <i class='bx bxs-doughnut-chart'></i>
-                    <span class="text">Reservations </span>
+                    <span class="text"> Analytics </span>
                 </a>
             </li>
             <li data-section="messages">
@@ -123,7 +123,7 @@
                         <h1>Dashboard</h1>
                         <ul class="breadcrumb">
                             <li>
-                                <a href="#">Analytics</a>
+                                <a href="#">Overview</a>
                             </li>
                             <li><i class='bx bx-chevron-right'></i></li>
                             <li>
@@ -327,9 +327,9 @@
                         </div>
                         <div class="card-body">
             <!-- Main Charts Grid -->
-                    <div class="charts-grid">
+                    <div class="charts-grid full-width">
                         <!-- Booking Status Distribution -->
-                        <div class="card">
+                        <div class="card full-width">
                             <div class="card-header">
                                 <h2 class="card-title">Booking Status</h2>
                                 <div class="card-actions">
@@ -347,7 +347,7 @@
                         </div>
                         
                         <!-- Monthly Booking Trends -->
-                        <div class="card">
+                        <div class="card full-width">
                             <div class="card-header">
                                 <h2 class="card-title">Monthly Trends</h2>
                                 <div class="card-actions">
@@ -383,7 +383,7 @@
                         </div>
                         
                         <!-- Guest Composition -->
-                        <div class="card">
+                        <div class="card full-width">
                             <div class="card-header">
                                 <h2 class="card-title">Guest Composition</h2>
                                 <div class="card-actions">
@@ -428,7 +428,7 @@
                     </a>
                 </div>
 
-                <div class="container">
+                <div class="container full-width">
                     <div class="card full-width">
                         <div class="card-header">
                             <h2 class="card-title">Inbox</h2>
