--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -682,7 +682,7 @@
     <!-- CONTENT -->
 
     <script src="script.js"></script>
-     <script src="script2.js"></script>
+     <script src="script-m-trips.js"></script>
   <script type="module">
   // Authentication check with loading state
   
