--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -67,14 +67,14 @@
             </li>
             <li data-section="messages">
                 <a href="#">
-                    <i class='bx bxs-message-dots'></i>
-                    <span class="text">Messages</span>
+                    <i class='bx bxs-calendar-days'></i>
+                    <span class="text">Reservations</span>
                 </a>
             </li>
             <li data-section="team">
                 <a href="#">
                     <i class='bx bxs-group'></i>
-                    <span class="text">Team</span>
+                    <span class="text">Support Chat</span>
                 </a>
             </li>
         </ul>
