--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -67,7 +67,7 @@
             </li>
             <li data-section="messages">
                 <a href="#">
-                    <i class='bx bxs-calendar-days'></i>
+                    <i class="fa-solid bx fa-calendar-days"></i>
                     <span class="text">Reservations</span>
                 </a>
             </li>
