--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -67,14 +67,14 @@
             </li>
             <li data-section="messages">
                 <a href="#">
-                    <i class="fa-solid bx fa-calendar-days"></i>
+                    <i class="bx bx-directions"></i>
                     <span class="text">Reservations</span>
                 </a>
             </li>
             <li data-section="team">
                 <a href="#">
-                    <i class='bx bxs-group'></i>
-                    <span class="text">Support Chat</span>
+                    <i class='bx bx-money'></i>
+                    <span class="text">Withdraw</span>
                 </a>
             </li>
         </ul>
