--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -55,7 +55,7 @@
             </li>
             <li data-section="trips">
                 <a href="#">
-                    <i class='bx bxs-shopping-bag-alt'></i>
+                    <i class='bx bxs-store-alt'></i>
                     <span class="text">My Trips</span>
                 </a>
             </li>
@@ -67,13 +67,13 @@
             </li>
             <li data-section="messages">
                 <a href="#">
-                    <i class="bx bx-directions"></i>
+                    <i class="bx bxs-directions"></i>
                     <span class="text">Reservations</span>
                 </a>
             </li>
             <li data-section="team">
                 <a href="#">
-                    <i class='bx bx-money'></i>
+                    <i class='bx bxs-money'></i>
                     <span class="text">Withdraw</span>
                 </a>
             </li>
