--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -67,13 +67,13 @@
             </li>
             <li data-section="messages">
                 <a href="#">
-                    <i class="bx bxs-directions"></i>
+                    <i class="bx bxs-file-pdf"></i>
                     <span class="text">Reservations</span>
                 </a>
             </li>
             <li data-section="team">
                 <a href="#">
-                    <i class='bx bxs-money'></i>
+                    <i class='bx bx-money'></i>
                     <span class="text">Withdraw</span>
                 </a>
             </li>
