--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -993,6 +993,7 @@
 
     <script src="script.js"></script>
      <script src="script-m-trips.js"></script>
+  <script src="ad-trip.js"></script>
   <script type="module">
   // Authentication check with loading state
   
