--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -80,7 +80,7 @@
             <div class="logo-container">
                 <img src="https://blogger.googleusercontent.com/img/a/AVvXsEjGLYfehf5gTkhli-onh8WqHg2Ve_BEw1GHxqS5E0pUMywRV9LXj0M45PfhXXgiEwCcR3t8EzzoBUAbhLjIlbAmttq5Jf1Quhxke9PBW5GFu1fwSIjtAzPwRhjUTAk_vV1kpZzApx6V-nYEfRpPMeBI7QUDp7yUTk_0pwLbC3lXPnwQzvZPfuDSigaHziw=s1600" alt="Discover Sharm Logo" class="app-logo">
             </div>
-            <span  id="userRole" class="text">Discover Sharm</span>
+            <span  class="text">Discover Sharm</span>
         </a>
         <ul class="side-menu top">
             <li class="active" data-section="dashboard">
@@ -867,8 +867,8 @@
         <div class="card-body">
             <div class="event-list">
                 <div class="event-item">
-                    <span class="event-date">22 Apr 2025 12:08 AM</span>
-                    <span class="event-description">Mohamed Gamal has updated the payout information.</span>
+                    <span class="event-date"></span>
+                    <span class="event-description"></span>
                 </div>
                 <!-- More events can be added dynamically -->
             </div>
@@ -907,7 +907,8 @@
                         </ul>
                     </div>
                 </div>
-
+   <span  id="userRole" class="text"></span>
+    
                 <div class="container">
                     <div class="card full-width">
                         <div class="card-header">
