--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -975,7 +975,7 @@
 
     <script src="script.js"></script>
      
-  <script src="ad-trip.js"></script>
+  <script src="final.js"></script>
   <script type="module">
   // Authentication check with loading state
   
