--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -1002,7 +1002,13 @@
   <script src="final.js"></script>
   <script type="module">
   // Authentication check with loading state
-  
+  function getCookie(name) {
+        const value = `; ${document.cookie}`;
+        const parts = value.split(`; ${name}=`);
+        if (parts.length === 2) return parts.pop().split(';').shift();
+        return null;
+      }
+    
       const isUserLoggedIn = getCookie('username');
 
       
