--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -242,7 +242,7 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="#" class="btn-download">
+                    <a href="#" id="newTripBtn" class="hidden bg-gradient-to-r from-amber-500 to-amber-600 hover:from-amber-600 hover:to-amber-700 text-white p-3 rounded-full text-sm font-medium shadow-sm transition-all">
                         <i class='bx bxs-plus-circle'></i>
                         <span class="text">Add trip</span>
                     </a>
@@ -304,9 +304,7 @@
           <input type="text" id="searchInput" placeholder="Search trips..." class="pl-8 pr-4 py-1.5 text-sm rounded-full border border-slate-200 focus:outline-none focus:ring-2 focus:ring-amber-500 w-full">
           <i class="fas fa-search absolute left-3 top-2.5 text-slate-400 text-sm"></i>
         </div>
-        <button id="newTripBtn" class="hidden bg-gradient-to-r from-amber-500 to-amber-600 hover:from-amber-600 hover:to-amber-700 text-white p-3 rounded-full text-sm font-medium shadow-sm transition-all">
-          <i class="fas fa-plus mr-1"></i>
-        </button>
+        
       </div>
       
       <!-- Filters -->
