--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -387,9 +387,9 @@
         
         <div class="mb-6">
           <div class="flex justify-between items-center mb-4">
-            <h2 class="text-xl font-semibold text-slate-800" id="editorTitle">Create New Trip</h2>
+            <h2 class="text-xl font-semibold " id="editorTitle">Create New Trip</h2>
             <div class="flex space-x-2">
-              <button type="button" id="cancelBtn" class="px-4 py-2 rounded-lg border border-slate-300 text-slate-700 hover:bg-slate-50 transition">
+              <button type="button" id="cancelBtn" class="px-4 py-2 rounded-lg bg-gradient-to-r from-slate-500 to-slate-600 hover:from-slate-600 hover:to-slate-700 text-white shadow-sm transition">
                 <i class="fa-solid fa-xmark"></i>
               </button>
               <button type="button" id="deleteBtn" class="px-4 py-2 rounded-lg bg-gradient-to-r from-red-500 to-red-600 hover:from-red-600 hover:to-red-700 text-white shadow-sm transition hidden">
