--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -253,7 +253,7 @@
       <div class="glass-card p-4 rounded-xl stat-card">
         <div class="flex items-center justify-between">
           <div>
-            <p class="text-sm text-slate-500">Total Trips</p>
+            <p class="text-sm">Total Trips</p>
             <h3 class="text-2xl font-bold" id="totalTrips">0</h3>
           </div>
           <div class="p-3 rounded-full bg-amber-100 text-amber-600">
@@ -265,7 +265,7 @@
       <div class="glass-card p-4 rounded-xl stat-card hidden">
         <div class="flex items-center justify-between">
           <div>
-            <p class="text-sm text-slate-500">Top Rated</p>
+            <p class="text-sm">Top Rated</p>
             <h3 class="text-2xl font-bold" id="topRated">0</h3>
           </div>
           <div class="p-3 rounded-full bg-green-100 text-green-600">
@@ -277,7 +277,7 @@
       <div class="glass-card p-4 rounded-xl stat-card">
         <div class="flex items-center justify-between">
           <div>
-            <p class="text-sm text-slate-500">Pending</p>
+            <p class="text-sm">Pending</p>
             <h3 class="text-2xl font-bold" id="pendingTrips">0</h3>
           </div>
           <div class="p-3 rounded-full bg-purple-100 text-purple-600">
@@ -301,7 +301,7 @@
               <div id="tripListSection">
       <div class="flex justify-between gap-4 items-center mb-4">
         <div class="relative w-full max-w-md">
-          <input type="text" id="searchInput" placeholder="Search trips..." class="pl-8 pr-4 py-1.5 text-sm rounded-full border border-slate-200 focus:outline-none focus:ring-2 focus:ring-amber-500 w-full">
+          <input type="text" id="searchInput" placeholder="Search trips..." class="pl-8 pr-4 py-1.5 text-sm text-black rounded-full border border-slate-200 focus:outline-none focus:ring-2 focus:ring-amber-500 w-full">
           <i class="fas fa-search absolute left-3 top-2.5 text-slate-400 text-sm"></i>
         </div>
         
@@ -311,7 +311,7 @@
       <div class="flex flex-wrap gap-2 mb-4">
         <div class="flex items-center space-x-2 bg-white rounded-full px-3 py-1.5 shadow-xs border border-slate-200">
           <span class="text-slate-500 text-sm">Filter:</span>
-          <select id="categoryFilter" class="text-sm border-none focus:ring-0 focus:outline-none bg-transparent">
+          <select id="categoryFilter" class="text-sm text-black border-none focus:ring-0 focus:outline-none bg-transparent">
             <option value="">All Categories</option>
             <option value="Adventure">Adventure</option>
             <option value="Cultural">Cultural</option>
@@ -321,7 +321,7 @@
         
         <div class="flex items-center space-x-2 bg-white rounded-full px-3 py-1.5 shadow-xs border border-slate-200">
           <span class="text-slate-500 text-sm">Sort:</span>
-          <select id="sortFilter" class="text-sm border-none focus:ring-0 focus:outline-none bg-transparent">
+          <select id="sortFilter" class="text-sm text-black border-none focus:ring-0 focus:outline-none bg-transparent">
             <option value="newest">Newest First</option>
             <option value="priceLow">Price: Low to High</option>
             <option value="priceHigh">Price: High to Low</option>
