--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -251,7 +251,7 @@
                 <div class="container">
                       <div class="grid grid-cols-2 sm:grid-cols-2 lg:grid-cols-3 gap-4 mb-6">
       <div class="glass-card p-4 rounded-xl stat-card">
-        <div class="flex items-center justify-between">
+        <div class="flex items-center justify-between w-full">
           <div>
             <p class="text-sm">Total Trips</p>
             <h3 class="text-2xl font-bold" id="totalTrips">0</h3>
@@ -263,7 +263,7 @@
       </div>
       
       <div class="glass-card p-4 rounded-xl stat-card hidden">
-        <div class="flex items-center justify-between">
+        <div class="flex items-center justify-between w-full">
           <div>
             <p class="text-sm">Top Rated</p>
             <h3 class="text-2xl font-bold" id="topRated">0</h3>
@@ -275,7 +275,7 @@
       </div>
       
       <div class="glass-card p-4 rounded-xl stat-card">
-        <div class="flex items-center justify-between">
+        <div class="flex items-center justify-between w-full">
           <div>
             <p class="text-sm">Pending</p>
             <h3 class="text-2xl font-bold" id="pendingTrips">0</h3>
