--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -253,7 +253,7 @@
       <div class="glass-card p-4 rounded-xl stat-card">
         <div class="flex items-center justify-between w-full">
           <div>
-            <p class="text-sm">Total Trips</p>
+            <p class="text-sm">Active</p>
             <h3 class="text-2xl font-bold" id="totalTrips">0</h3>
           </div>
           <div class="p-3 rounded-full bg-amber-100 text-amber-600">
