--- a/bucket/admin/m-trips.html
+++ b/bucket/admin/m-trips.html
@@ -437,15 +437,10 @@
                         <option value="Nature">Nature</option>
                       </select>
                     </div>
-                    <div>
+                    <div class="hidden">
                       <label for="rating" class="block text-sm font-medium text-slate-700 mb-1">Rating*</label>
                       <select id="rating" required class="w-full p-3 input-field rounded-lg text-sm focus:ring-2 focus:ring-amber-500">
-                        <option value="">Select Rating</option>
-                        <option value="1">★☆☆☆☆ (1)</option>
-                        <option value="2">★★☆☆☆ (2)</option>
-                        <option value="3">★★★☆☆ (3)</option>
-                        <option value="4">★★★★☆ (4)</option>
-                        <option value="5">★★★★★ (5)</option>
+                      <option value="" selected>Rating</option>
                       </select>
                     </div>
                   </div>
